# notes-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
deploy/: README.md  deploy.sh  poll-deploy.sh
skills/resource-ingestion/: SKILL.md
src/notes_mcp/: __init__.py  auth.py  config.py  errors.py  files.py  formatting.py  git_ops.py  logging.py  notes.py  resources.py  scripts.py  server.py  templates.py
tests/: conftest.py  test_auth.py  test_config.py  test_formatting.py  test_git_ops.py  test_new_tools.py  test_notes.py  test_resources.py  test_scripts.py
