[project]
name = "notes-mcp"
version = "0.1.0"
description = "Remote MCP server exposing a personal notes git repo to Claude"
readme = "README.md"
authors = [
    { name = "John Ring", email = "johnhringiv@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=49.0.0",
    "mcp[cli]>=1.28.1",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
notes-mcp = "notes_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "A005", # notes_mcp.logging intentionally mirrors PLAN.md's layout
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "types-pyyaml>=6.0.12.20260518",
]
